--- a/index.html
+++ b/index.html
@@ -5,23 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/style1.css">
+    <!-- <link rel="stylesheet" href="/styles/style2.css"> -->
+    <!-- <link rel="stylesheet" href="/styles/style3.css"> -->
 </head>
 <body>
     <header>
         <figure>
-            <img src="./logoMightyDucks.png" alt="Logo">
+            <img class="logo" src="./logoMightyDucks.png" alt="Logo">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="#">Home</a> | 
-            <a href="./about.html">About MDHL</a> | 
-            <a href="./contact.html">Contact</a>
-        </nav>
+        <h2 class="leyendaEvents">Upcoming events</h2>
     </header>
+    <nav class="barraNav">
+        <a class="links" href="#">Home</a> 
+        <a class="links" href="./about.html">About MDHL</a>
+        <a class="links" href="./contact.html">Contact</a>
+    </nav>
     <main>
         <figure>
-            <img src="./hockey1.jpg" alt="image 1">
+            <img class="imagen1" src="./hockey1.jpg" alt="image 1">
         </figure>
         <section>
             <h2>Upcoming Events</h2>
