--- a/contact.html
+++ b/contact.html
@@ -12,20 +12,21 @@
 <body>
     <header>
         <figure>
-            <img src="./logoMightyDucks.png" alt="Logo">
+            <img class="logo" src="./logoMightyDucks.png" alt="Logo">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="./index.html">Home</a> | 
-            <a href="./about.html">About MDHL</a> | 
-            <a href="#">Contact</a>
-        </nav>
+        <h2 class="leyendaHeader">Contact</h2>
     </header>
+    <nav class="barraNav">
+        <a class="links" href="./index.html">Home</a>
+        <a class="links" href="./about.html">About MDHL</a>
+        <a class="links" href="#">Contact</a>
+    </nav>
     <main>
         <figure>
-            <img src="./hockey3.jpg" alt="image 3">
+            <img class="imagen3" src="./hockey3.jpg" alt="image 3">
         </figure>
-        <p>Please email us at mdhl@chihockey.org</p>
+        <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
         <p>We reply to your email as soon as we can.</p>
     </main>
 </body>
