--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             <img class="logo" src="./logoMightyDucks.png" alt="Logo">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
-        <h2 class="leyendaEvents">Upcoming events</h2>
     </header>
     <nav class="barraNav">
         <a class="links" href="#">Home</a> 
@@ -27,18 +26,18 @@
             <img class="imagen1" src="./hockey1.jpg" alt="image 1">
         </figure>
         <section>
-            <h2>Upcoming Events</h2>
-            <article>
+            <h2 class="leyendaHeader">Upcoming Events</h2>
+            <article class="articulo">
                 <h3>August 4</h3>
-                <p>MDSL Fundraiser</p>
+                <p class="parrafoArticulo">MDSL Fundraiser</p>
             </article>
-            <article>
+            <article class="articulo">
                 <h3>August 16</h3>
-                <p>Season Kick-off: Meet the Teams</p>
+                <p class="parrafoArticulo">Season Kick-off: Meet the Teams</p>
             </article>
-            <article>
+            <article class="articulo">
                 <h3>September 1</h3>
-                <p>First Game of the Season (Check Game Schedule for details)</p>
+                <p class="parrafoArticulo">First Game of the Season (Check Game Schedule for details)</p>
             </article>
         </section>
     </main>
