--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="/styles/style1.css">
-    <!-- <link rel="stylesheet" href="/styles/style2.css"> -->
+    <!-- <link rel="stylesheet" href="/styles/style1.css"> -->
+    <link rel="stylesheet" href="/styles/style2.css">
     <!-- <link rel="stylesheet" href="/styles/style3.css"> -->
 </head>
 <body>
@@ -28,15 +28,15 @@
         </figure>
         <section class="seccionAbout">
             <h2>Mision</h2>
-            <p>To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of hockey, specifically those skills around team cooperation and good sportsmanship</p>
+            <p class="parrafoSangria">To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of hockey, specifically those skills around team cooperation and good sportsmanship</p>
         </section>
         <section class="seccionAbout">
             <h2>Vision</h2>
-            <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes through the building of character, self-discipline, and leadership.</p>
+            <p class="parrafoSangria">The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes through the building of character, self-discipline, and leadership.</p>
         </section>
         <section class="seccionAbout">
             <h2>General Information</h2>
-            <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members</p>
+            <p class="parrafoSangria">The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members</p>
         </section>
     </main>
     
