--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/styles/style1.css">
-    <!-- <link rel="stylesheet" href="/styles/style2.css"> -->
+    <!-- <link rel="stylesheet" href="/styles/style1.css"> -->
+    <link rel="stylesheet" href="/styles/style2.css">
     <!-- <link rel="stylesheet" href="/styles/style3.css"> -->
 </head>
 <body>
@@ -29,15 +29,15 @@
             <h2 class="leyendaHeader">Upcoming Events</h2>
             <article class="articulo">
                 <h3>August 4</h3>
-                <p class="parrafoArticulo">MDSL Fundraiser</p>
+                <p class="parrafoSangria">MDSL Fundraiser</p>
             </article>
             <article class="articulo">
                 <h3>August 16</h3>
-                <p class="parrafoArticulo">Season Kick-off: Meet the Teams</p>
+                <p class="parrafoSangria">Season Kick-off: Meet the Teams</p>
             </article>
             <article class="articulo">
                 <h3>September 1</h3>
-                <p class="parrafoArticulo">First Game of the Season (Check Game Schedule for details)</p>
+                <p class="parrafoSangria">First Game of the Season (Check Game Schedule for details)</p>
             </article>
         </section>
     </main>
