--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <!-- <link rel="stylesheet" href="/styles/style1.css"> -->
-    <link rel="stylesheet" href="/styles/style2.css">
-    <!-- <link rel="stylesheet" href="/styles/style3.css"> -->
+    <!-- <link rel="stylesheet" href="/styles/style2.css"> -->
+    <link rel="stylesheet" href="/styles/style3.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
     </header>
     <nav class="barraNav">
         <a class="links" href="./index.html">Home</a>
-        <a class="links" href="#">About MDHL</a>
+        <a class="links verde" href="#">About MDHL</a>
         <a class="links" href="./contact.html">Contact</a>
     </nav>
     <main>
@@ -36,7 +36,7 @@
         </section>
         <section class="seccionAbout">
             <h2>General Information</h2>
-            <p class="parrafoSangria">The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members</p>
+            <p class="parrafoSangria foto1">The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members</p>
         </section>
     </main>
     
