--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <!-- <link rel="stylesheet" href="/styles/style1.css"> -->
-    <link rel="stylesheet" href="/styles/style2.css">
-    <!-- <link rel="stylesheet" href="/styles/style3.css"> -->
+    <!-- <link rel="stylesheet" href="/styles/style2.css"> -->
+    <link rel="stylesheet" href="/styles/style3.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
     <nav class="barraNav">
         <a class="links" href="./index.html">Home</a>
         <a class="links" href="./about.html">About MDHL</a>
-        <a class="links" href="#">Contact</a>
+        <a class="links verde" href="#">Contact</a>
     </nav>
     <main>
         <figure>
