--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <!-- <link rel="stylesheet" href="/styles/style1.css"> -->
-    <link rel="stylesheet" href="/styles/style2.css">
-    <!-- <link rel="stylesheet" href="/styles/style3.css"> -->
+    <!-- <link rel="stylesheet" href="/styles/style2.css"> -->
+    <link rel="stylesheet" href="/styles/style3.css">
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
         <h1>Mighty Ducks Hockey League</h1>
     </header>
     <nav class="barraNav">
-        <a class="links" href="#">Home</a> 
+        <a class="links verde" href="#">Home</a> 
         <a class="links" href="./about.html">About MDHL</a>
         <a class="links" href="./contact.html">Contact</a>
     </nav>
