--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <figure>
-            <img class="logo" src="./logoMightyDucks.png" alt="Logo">
+            <img class="logo" src="/images/logoMightyDucks.png" alt="Logo">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
         <h2 class="leyendaHeader">About</h2>
@@ -24,7 +24,7 @@
     </nav>
     <main>
         <figure>
-            <img class="imagen2" src="./hockey2.jpg" alt="image 2">
+            <img class="imagen2" src="/images/hockey2.jpg" alt="image 2">
         </figure>
         <section class="seccionAbout">
             <h2>Mision</h2>
