--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <figure>
-            <img class="logo" src="./logoMightyDucks.png" alt="Logo">
+            <img class="logo" src="/images/logoMightyDucks.png" alt="Logo">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
         <h2 class="leyendaHeader">Contact</h2>
@@ -24,7 +24,7 @@
     </nav>
     <main>
         <figure>
-            <img class="imagen3" src="./hockey3.jpg" alt="image 3">
+            <img class="imagen3" src="/images/hockey3.jpg" alt="image 3">
         </figure>
         <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
         <p>We reply to your email as soon as we can.</p>
