--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <figure>
-            <img class="logo" src="./logoMightyDucks.png" alt="Logo">
+            <img class="logo" src="/images/logoMightyDucks.png" alt="Logo">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
     </header>
@@ -23,7 +23,7 @@
     </nav>
     <main>
         <figure>
-            <img class="imagen1" src="./hockey1.jpg" alt="image 1">
+            <img class="imagen1" src="/images/hockey1.jpg" alt="image 1">
         </figure>
         <section>
             <h2 class="leyendaHeader">Upcoming Events</h2>
