agrego pag info + rules, + ico

--- a/rules.html
+++ b/rules.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Rules of Play & Policies</title>
     <link rel="stylesheet" href="/styles/style3.css">
     <link rel="shortcut icon" href="/images/miniLogo.png" type="image/x-icon">
 </head>
-
 <body>
     <header>
         <figure>
@@ -18,10 +16,10 @@
         <h1>Mighty Ducks Hockey League</h1>
     </header>
     <nav class="barraNav">
-        <a class="links" href="#">Home</a>
+        <a class="links" href="./index.html"">Home</a> 
         <a class="links" href="./about.html">About MDHL</a>
         <a class="links" href="./game_info.html">Information</a>
-        <a class="links" href="./rules.html">Rules</a>
+        <a class="links" href="#">Rules</a>
         <a class="links" href="./contact.html">Contact</a>
     </nav>
     <main>
@@ -29,9 +27,9 @@
             <img class="imagen1" src="/images/hockey1.jpg" alt="image 1">
         </figure>
         <section>
-            <h2 class="leyendaHeader">Upcoming Events</h2>
+            <h2 class="leyendaHeader">Rules of play & policies</h2>
             <article class="articulo">
-                <h3>August 4</h3>
+                <h3>IHF rules shall govern MDHL play except as modified herein</h3>
                 <p class="parrafoSangria">MDSL Fundraiser</p>
             </article>
             <article class="articulo">
@@ -44,7 +42,5 @@
             </article>
         </section>
     </main>
-
 </body>
-
 </html>
