--- a/about.html
+++ b/about.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <!-- <link rel="stylesheet" href="/styles/style1.css"> -->
-    <!-- <link rel="stylesheet" href="/styles/style2.css"> -->
     <link rel="stylesheet" href="/styles/style3.css">
+    <link rel="shortcut icon" href="/images/miniLogo.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -19,7 +18,9 @@
     </header>
     <nav class="barraNav">
         <a class="links" href="./index.html">Home</a>
-        <a class="links verde" href="#">About MDHL</a>
+        <a class="links" href="#">About MDHL</a>
+        <a class="links" href="./game_info.html">Information</a>
+        <a class="links" href="./rules.html">Rules</a>
         <a class="links" href="./contact.html">Contact</a>
     </nav>
     <main>
