design3 elegido y flex-box

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="/styles/style3.css">
     <link rel="shortcut icon" href="/images/miniLogo.png" type="image/x-icon">
 </head>
+
 <body>
     <header>
         <figure>
@@ -23,12 +25,16 @@
         <a class="links" href="./rules.html">Rules</a>
         <a class="links" href="#">Contact</a>
     </nav>
-    <main>
-        <figure>
-            <img class="imagen3" src="/images/hockey3.jpg" alt="image 3">
+    <main class="main-flex">
+        <figure class="image-flex">
+            <img class="imagen1" src="/images/design1_image1.jpg" alt="jugando hockey medio campo">
+            <img class="imagen2" src="/images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
-        <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-        <p>We reply to your email as soon as we can.</p>
+        <div class="div-contact">
+            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+            <p>We reply to your email as soon as we can.</p>
+        </div>
     </main>
 </body>
+
 </html>
