--- a/game_info.html
+++ b/game_info.html
@@ -16,114 +16,99 @@
             <img class="logo" src="/images/logoMightyDucks.png" alt="Logo">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
+        <h2 class="leyendaHeader">Fall Schedule</h2>
     </header>
     <nav class="barraNav">
-        <a class="links" href="./index.html"">Home</a>
+        <a class="links" href="./index.html">Home</a>
         <a class="links" href="./about.html">About MDHL</a>
         <a class="links" href="#">Information</a>
         <a class="links" href="./rules.html">Rules</a>
         <a class="links" href="./contact.html">Contact</a>
     </nav>
-    <main>
-        <!-- <figure>
-            <img class="imagen1" src="/images/hockey1.jpg" alt="image 1">
-        </figure> -->
-        <section>
-            <h2 class="leyendaHeader">Fall Schedule</h2>
-            <article class="articulo">
-                <h3>* All games take place on saturday</h3>
-                <!-- <p class="parrafoSangria">* All games take place on saturday</p> -->
-            </article>
-            <article class="articulo">
-                <table>
-                    <caption>Tabla esquema</caption>
-                    <thead>
-                        <tr>
-                            <th>SEPTEMBER</th>
-                            <th>Teams</th>
-                            <th>Location</th>
-                            <th>Times</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td rowspan="2">9/01</td>
-                            <td>U1 and U4</td>
-                            <td>AJ Katzenmaier</td>
-                            <td>9:30 am</td>
-                        </tr>
-                        <tr>
-                            <!-- <td>9/01</td> -->
-                            <td>U3 and U2</td>
-                            <td>Greenbay</td>
-                            <td>1:00 pm</td>
-                        </tr>
-                        <tr>
-                            <td rowspan="2">9/08</td>
-                            <td>U5 and U6</td>
-                            <td>Howard A Yeager</td>
-                            <td>9:30 am</td>
-                        </tr>
-                        <tr>
-                            <!-- <td>9/08</td> -->
-                            <td>U6 and U1</td>
-                            <td>Marjorie P Hart</td>
-                            <td>1:00 pm</td>
-                        </tr>
-                        <tr>
-                            <td rowspan="2">9/15</td>
-                            <td>U2 and U4</td>
-                            <td>North</td>
-                            <td>9:30 am</td>
-                        </tr>
-                        <tr>
-                            <!-- <td>9/15</td> -->
-                            <td>U3 and U5</td>
-                            <td>AJ Katzenmaier</td>
-                            <td>1:00 pm</td>
-                        </tr>
-                        <tr>
-                            <td rowspan="2">9/22</td>
-                            <td>U1 and U3</td>
-                            <td>South</td>
-                            <td>9:30 am</td>
-                        </tr>
-                        <tr>
-                            <!-- <td>9/22</td> -->
-                            <td>U2 and U6</td>
-                            <td>Howard A Yeager</td>
-                            <td>1:00 pm</td>
-                        </tr>
-                        <tr>
-                            <td>9/29</td>
-                            <td>U4 and U5</td>
-                            <td>Greenbay</td>
-                            <td>9:30 am</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </article>
-            <article class="articulo">
-                <h3>Facility Type:</h3>
-                <p class="parrafoSangria">Outdoor</p>
-            </article>
-            <article class="articulo">
-                <h3>Additional information:</h3>
-                <p class="parrafoSangria">If deemed necesary by MDHL games may be shortened or cancelled due ti extreme weather conditions</p>
-            </article>
-            <article class="articulo">
-                <h3>Please direct all questions to:</h3>
-                <p class="parrafoSangria">Michael Randall, League Coordinator</p>
-            </article>
-            <article class="articulo">
-                <h3>Phone:</h3>
-                <p class="parrafoSangria">(630) 690-8132</p>
-            </article>
-            <article class="articulo">
-                <h3>Email:</h3>
-                <p class="parrafoSangria">michael.randall@chihockey.org</p>
-            </article>
-        </section>
+    <main class="main-flex">
+        <figure class="image-flex">
+            <img class="imagen1" src="/images/design1_image1.jpg" alt="jugando hockey medio campo">
+            <img class="imagen2" src="/images/design1_image2.jpg" alt="jugando hockey tiro al arco">
+        </figure>
+
+        <article class="div-flex-game_info">
+            <h2 class="identacion">* All games take place on saturday</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>SEPTEMBER</th>
+                        <th>Teams</th>
+                        <th>Location</th>
+                        <th>Times</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td rowspan="2">9/01</td>
+                        <td>U1 and U4</td>
+                        <td>AJ Katzenmaier</td>
+                        <td>9:30 am</td>
+                    </tr>
+                    <tr>
+                        <td>U3 and U2</td>
+                        <td>Greenbay</td>
+                        <td>1:00 pm</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">9/08</td>
+                        <td>U5 and U6</td>
+                        <td>Howard A Yeager</td>
+                        <td>9:30 am</td>
+                    </tr>
+                    <tr>
+                        <td>U6 and U1</td>
+                        <td>Marjorie P Hart</td>
+                        <td>1:00 pm</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">9/15</td>
+                        <td>U2 and U4</td>
+                        <td>North</td>
+                        <td>9:30 am</td>
+                    </tr>
+                    <tr>
+                        <td>U3 and U5</td>
+                        <td>AJ Katzenmaier</td>
+                        <td>1:00 pm</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">9/22</td>
+                        <td>U1 and U3</td>
+                        <td>South</td>
+                        <td>9:30 am</td>
+                    </tr>
+                    <tr>
+                        <td>U2 and U6</td>
+                        <td>Howard A Yeager</td>
+                        <td>1:00 pm</td>
+                    </tr>
+                    <tr>
+                        <td>9/29</td>
+                        <td>U4 and U5</td>
+                        <td>Greenbay</td>
+                        <td>9:30 am</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div>
+                <p><span>Facility Type:</span> Outdoor</p>
+                <p><span>Additional information:</span> If deemed necesary by MDHL games may be shortened or cancelled
+                    due ti extreme weather conditions</p>
+            </div>
+            <div>
+                <p><span>Please direct all questions to:</span> Michael Randall, League Coordinator</p>
+                <div class="contacto-game_info">
+                    <p><span>Phone:</span> (630) 690-8132</p>
+                    <p><span>Email:</span> michael.randall@chihockey.org</p>
+                </div>
+            </div>
+        </article>
     </main>
 </body>
 
