--- a/about.html
+++ b/about.html
@@ -23,22 +23,25 @@
         <a class="links" href="./rules.html">Rules</a>
         <a class="links" href="./contact.html">Contact</a>
     </nav>
-    <main>
-        <figure>
-            <img class="imagen2" src="/images/hockey2.jpg" alt="image 2">
+    <main class="main-flex">
+        <figure class="image-flex">
+            <img class="imagen1" src="/images/design1_image1.jpg" alt="jugando hockey medio campo">
+            <img class="imagen2" src="/images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
-        <section class="seccionAbout">
-            <h2>Mision</h2>
-            <p class="parrafoSangria">To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of hockey, specifically those skills around team cooperation and good sportsmanship</p>
-        </section>
-        <section class="seccionAbout">
-            <h2>Vision</h2>
-            <p class="parrafoSangria">The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes through the building of character, self-discipline, and leadership.</p>
-        </section>
-        <section class="seccionAbout">
-            <h2>General Information</h2>
-            <p class="parrafoSangria foto1">The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members</p>
-        </section>
+        <div class="div-flex-about">
+            <section>
+                <h2 class="identacion">Mision</h2>
+                <p>To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of hockey, specifically those skills around team cooperation and good sportsmanship</p>
+            </section>
+            <section>
+                <h2 class="identacion">Vision</h2>
+                <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes through the building of character, self-discipline, and leadership.</p>
+            </section>
+            <section>
+                <h2 class="identacion">General Information</h2>
+                <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members</p>
+            </section>
+        </div>
     </main>
     
 </body>
