--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <img class="logo" src="/images/logoMightyDucks.png" alt="Logo">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
+        <h2 class="leyendaHeader">Upcoming Events</h2>
     </header>
     <nav class="barraNav">
         <a class="links" href="#">Home</a>
@@ -24,25 +25,25 @@
         <a class="links" href="./rules.html">Rules</a>
         <a class="links" href="./contact.html">Contact</a>
     </nav>
-    <main>
-        <figure>
-            <img class="imagen1" src="/images/hockey1.jpg" alt="image 1">
+    <main class="main-flex">
+        <figure class="image-flex">
+            <img class="imagen1" src="/images/design1_image1.jpg" alt="jugando hockey medio campo">
+            <img class="imagen2" src="/images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
-        <section>
-            <h2 class="leyendaHeader">Upcoming Events</h2>
-            <article class="articulo">
-                <h3>August 4</h3>
-                <p class="parrafoSangria">MDSL Fundraiser</p>
+        <div class="div-flex">
+            <article>
+                <h2 class="identacion">August 4</h2>
+                <p>MDSL Fundraiser</p>
             </article>
-            <article class="articulo">
-                <h3>August 16</h3>
-                <p class="parrafoSangria">Season Kick-off: Meet the Teams</p>
+            <article>
+                <h2 class="identacion">August 16</h2>
+                <p>Season Kick-off: Meet the Teams</p>
             </article>
-            <article class="articulo">
-                <h3>September 1</h3>
-                <p class="parrafoSangria">First Game of the Season (Check Game Schedule for details)</p>
+            <article>
+                <h2 class="identacion">September 1</h2>
+                <p>First Game of the Season (Check Game Schedule for details)</p>
             </article>
-        </section>
+        </div>
     </main>
 
 </body>
