--- a/rules.html
+++ b/rules.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,39 +9,90 @@
     <link rel="stylesheet" href="/styles/style3.css">
     <link rel="shortcut icon" href="/images/miniLogo.png" type="image/x-icon">
 </head>
+
 <body>
     <header>
         <figure>
             <img class="logo" src="/images/logoMightyDucks.png" alt="Logo">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
+        <h2 class="leyendaHeader">Rules of play & policies</h2>
     </header>
     <nav class="barraNav">
-        <a class="links" href="./index.html"">Home</a> 
-        <a class="links" href="./about.html">About MDHL</a>
+        <a class="links" href="./index.html">Home</a>
+        <a class=" links" href="./about.html">About MDHL</a>
         <a class="links" href="./game_info.html">Information</a>
         <a class="links" href="#">Rules</a>
         <a class="links" href="./contact.html">Contact</a>
     </nav>
-    <main>
-        <figure>
-            <img class="imagen1" src="/images/hockey1.jpg" alt="image 1">
+    <main class="main-flex">
+        <figure class="image-flex">
+            <img class="imagen1" src="/images/design1_image1.jpg" alt="jugando hockey medio campo">
+            <img class="imagen2" src="/images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
-        <section>
-            <h2 class="leyendaHeader">Rules of play & policies</h2>
-            <article class="articulo">
-                <h3>IHF rules shall govern MDHL play except as modified herein</h3>
-                <p class="parrafoSangria">MDSL Fundraiser</p>
+        <section class="div-flex-rules">
+            <h2>IHF rules shall govern MDHL play except as modified herein</h2>
+            <article>
+                <h3>SPORTSMANSHIP</h3>
+                <p class="identacion">The common interest that members of the Association share is to inspire youth
+                    to practice the ideals of sportsmanship and fair play. Any player, coach, team, parent, spectator,
+                    administrator or referee whose behavior detracts from this purpose is subject to disciplinary action
+                    regardless of technical hockey background, expertise, accomplishments or standing.</p>
             </article>
-            <article class="articulo">
-                <h3>August 16</h3>
-                <p class="parrafoSangria">Season Kick-off: Meet the Teams</p>
+            <article>
+                <h3>IHF FIELD REGULATIONS</h3>
+                <ol>
+                    <li class="margenLista-rules">
+                        <span>DIMENSIONS.</span> IHF Law 1 provides for flexible external field dimensions within a
+                        given maximum and
+                        minimum width and length. These dimensions should be adhered to for all fields used by teams
+                        under 12 and older.
+                    </li>
+                    <li class="margenLista-rules">
+                        <span>COMPETITION FIELDS.</span> Fields used within the competition program must be a minimum of
+                        100 x 60
+                        yards.Leagues, districts or associations participating in the state competition program that are
+                        unable to provide a field that meets these minimum requirements must advise the State
+                        Competition Board which will assign its Fields Committee to inspect the field and recommend to
+                        the Board whether or not a waiver of the minimum dimensions should be granted. Teams from
+                        leagues, districts or associations that are unable to provide an acceptable field may be
+                        required to play all their games away.
+                    </li>
+                    <li class="margenLista-rules">
+                        <span>FIELDS USED BY YOUNG AGE GROUPS</span>
+                        <ol>
+                            <li class="olConLetra">
+                                U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields for older
+                                age groups should be progressively larger.
+                            </li>
+                            <li class="olConLetra">
+                                U-8 plays on a field 40-50 yards in length and 20-30 yards width.
+                            </li>
+                            <li class="olConLetra">
+                                U-10 play on a field 70-80 yards in length and 40-50 yards in width.
+                            </li>
+                            <li class="olConLetra">
+                                In addition, fields used by young age groups may have their internal dimensions and size
+                                of goal similarly modified.
+                            </li>
+                        </ol>
+                    </li>
+                </ol>
             </article>
-            <article class="articulo">
-                <h3>September 1</h3>
-                <p class="parrafoSangria">First Game of the Season (Check Game Schedule for details)</p>
+            <article>
+                <h3>ALL-PLAY</h3>
+                <p class="identacion">All-play means that every recreation player on every team shall play atleast fifty percent of each
+                    game. Coaches in the competition program are encouraged to play their players 50% of each game.</p>
+                <ul>
+                    <li class="styleCircle-rules">
+                        A Coach shall be permitted to not play a player 50% of each game under special circumstances,
+                        e.g., unexcused absences from practice and/or games, ungentlemanly conduct at practice and/or
+                        games, and injuries.
+                    </li>
+                </ul>
             </article>
         </section>
     </main>
 </body>
+
 </html>
