--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,9 @@
         <a class="links" href="./about.html">About MDHL</a>
         <a class="links" href="./game_info.html">Information</a>
         <a class="links" href="./rules.html">Rules</a>
+        <a class="links" href="./registration.html">Registration</a>
         <a class="links" href="#">Contact</a>
+
     </nav>
     <main class="main-flex">
         <figure class="image-flex">
