--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
         <a class="links" href="#">About MDHL</a>
         <a class="links" href="./game_info.html">Information</a>
         <a class="links" href="./rules.html">Rules</a>
+        <a class="links" href="./registration.html">Registration</a>
         <a class="links" href="./contact.html">Contact</a>
     </nav>
     <main class="main-flex">
