--- a/game_info.html
+++ b/game_info.html
@@ -23,6 +23,7 @@
         <a class="links" href="./about.html">About MDHL</a>
         <a class="links" href="#">Information</a>
         <a class="links" href="./rules.html">Rules</a>
+        <a class="links" href="./registration.html">Registration</a>
         <a class="links" href="./contact.html">Contact</a>
     </nav>
     <main class="main-flex">
