--- a/rules.html
+++ b/rules.html
@@ -20,13 +20,14 @@
     </header>
     <nav class="barraNav">
         <a class="links" href="./index.html">Home</a>
-        <a class=" links" href="./about.html">About MDHL</a>
+        <a class="links" href="./about.html">About MDHL</a>
         <a class="links" href="./game_info.html">Information</a>
         <a class="links" href="#">Rules</a>
+        <a class="links" href="./registration.html">Registration</a>
         <a class="links" href="./contact.html">Contact</a>
     </nav>
     <main class="main-flex">
-        <figure class="image-flex">
+        <figure class="image-flex fijarImagenes">
             <img class="imagen1" src="/images/design1_image1.jpg" alt="jugando hockey medio campo">
             <img class="imagen2" src="/images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
