form registro y mapas en game_info. agrego mas flex

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <img class="imagen1" src="/images/design1_image1.jpg" alt="jugando hockey medio campo">
             <img class="imagen2" src="/images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
-        <div class="div-flex-about">
+        <div class="div-flex div-flex-about">
             <section>
                 <h2 class="identacion">Mision</h2>
                 <p>To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of hockey, specifically those skills around team cooperation and good sportsmanship</p>
