--- a/game_info.html
+++ b/game_info.html
@@ -26,13 +26,13 @@
         <a class="links" href="./registration.html">Registration</a>
         <a class="links" href="./contact.html">Contact</a>
     </nav>
-    <main class="main-flex">
+    <main class="main-flex main-game_info">
         <figure class="image-flex">
             <img class="imagen1" src="/images/design1_image1.jpg" alt="jugando hockey medio campo">
             <img class="imagen2" src="/images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
 
-        <article class="div-flex-game_info">
+        <article class="div-flex div-flex-game_info">
             <h2 class="identacion">* All games take place on saturday</h2>
             <table>
                 <thead>
@@ -47,51 +47,51 @@
                     <tr>
                         <td rowspan="2">9/01</td>
                         <td>U1 and U4</td>
-                        <td>AJ Katzenmaier</td>
+                        <td><a href="#1" title="view map" class="linkMap">AJ Katzenmaier</a></td>
                         <td>9:30 am</td>
                     </tr>
                     <tr>
                         <td>U3 and U2</td>
-                        <td>Greenbay</td>
+                        <td><a href="#2" title="view map" class="linkMap">Greenbay</a></td>
                         <td>1:00 pm</td>
                     </tr>
                     <tr>
                         <td rowspan="2">9/08</td>
                         <td>U5 and U6</td>
-                        <td>Howard A Yeager</td>
+                        <td><a href="#3" title="view map" class="linkMap">Howard A Yeager</a></td>
                         <td>9:30 am</td>
                     </tr>
                     <tr>
                         <td>U6 and U1</td>
-                        <td>Marjorie P Hart</td>
+                        <td><a href="#4" title="view map" class="linkMap">Marjorie P Hart</a></td>
                         <td>1:00 pm</td>
                     </tr>
                     <tr>
                         <td rowspan="2">9/15</td>
                         <td>U2 and U4</td>
-                        <td>North</td>
+                        <td><a href="#5" title="view map" class="linkMap">North</a></td>
                         <td>9:30 am</td>
                     </tr>
                     <tr>
                         <td>U3 and U5</td>
-                        <td>AJ Katzenmaier</td>
+                        <td><a href="#1" title="view map" class="linkMap">AJ Katzenmaier</a></td>
                         <td>1:00 pm</td>
                     </tr>
                     <tr>
                         <td rowspan="2">9/22</td>
                         <td>U1 and U3</td>
-                        <td>South</td>
+                        <td><a href="#6" title="view map" class="linkMap">South</a></td>
                         <td>9:30 am</td>
                     </tr>
                     <tr>
                         <td>U2 and U6</td>
-                        <td>Howard A Yeager</td>
+                        <td><a href="#3" title="view map" class="linkMap">Howard A Yeager</a></td>
                         <td>1:00 pm</td>
                     </tr>
                     <tr>
                         <td>9/29</td>
                         <td>U4 and U5</td>
-                        <td>Greenbay</td>
+                        <td><a href="#2" title="view map" class="linkMap">Greenbay</a></td>
                         <td>9:30 am</td>
                     </tr>
                 </tbody>
@@ -109,8 +109,57 @@
                     <p><span>Email:</span> michael.randall@chihockey.org</p>
                 </div>
             </div>
+
+        </article>
+
+        <article class="mapa">
+            <h3 id="1">AJ Katzenmaier</h3>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11799.122572613156!2d-87.8628046!3d42.3258772!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses!2sar!4v1675726324731!5m2!1ses!2sar"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </article>
+
+        <article class="mapa">
+            <h3 id="2">Greenbay</h3>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.010604115178!2d-87.87107038469162!3d42.32097257918948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f933bce5af881%3A0x740a7a7d548adce1!2sGreen%20Bay%20School%20(Pre-K)!5e0!3m2!1ses!2sar!4v1675726835130!5m2!1ses!2sar"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </article>
+
+        <article class="mapa">
+            <h3 id="3">Howard A Yeager</h3>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.270062631389!2d-87.85606978469177!3d42.31543827918985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sar!4v1675726893783!5m2!1ses!2sar"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </article>
+
+        <article class="mapa">
+            <h3 id="4">Marjorie P Hart</h3>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3555.473843218005!2d-87.64845852454448!3d41.92992289123029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses!2sar!4v1675727078618!5m2!1ses!2sar"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </article>
+
+        <article class="mapa">
+            <h3 id="5">North</h3>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5933.62660547492!2d-87.6852058155785!3d41.961345000000016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd21663532b7b%3A0x17dec3397acc27a4!2sNorth%20Park%20Elementary%20School!5e0!3m2!1ses!2sar!4v1675727179074!5m2!1ses!2sar"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </article>
+
+        <article class="mapa">
+            <h3 id="6">South</h3>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2309005639827!2d-87.85473247700432!3d42.316273651234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses!2sar!4v1675727465218!5m2!1ses!2sar"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </article>
     </main>
-</body>
 
+</body>
 </html>
