--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="imagen1" src="/images/design1_image1.jpg" alt="jugando hockey medio campo">
             <img class="imagen2" src="/images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
-        <div class="div-flex">
+        <div class="div-flex div-flex-index">
             <article>
                 <h2 class="identacion">August 4</h2>
                 <p>MDSL Fundraiser</p>
