--- a/rules.html
+++ b/rules.html
@@ -31,17 +31,17 @@
             <img class="imagen1" src="/images/design1_image1.jpg" alt="jugando hockey medio campo">
             <img class="imagen2" src="/images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
-        <section class="div-flex-rules">
+        <section class="div-flex div-flex-rules">
             <h2>IHF rules shall govern MDHL play except as modified herein</h2>
             <article>
-                <h3>SPORTSMANSHIP</h3>
+                <h3 class="bottomH3">SPORTSMANSHIP</h3>
                 <p class="identacion">The common interest that members of the Association share is to inspire youth
                     to practice the ideals of sportsmanship and fair play. Any player, coach, team, parent, spectator,
                     administrator or referee whose behavior detracts from this purpose is subject to disciplinary action
                     regardless of technical hockey background, expertise, accomplishments or standing.</p>
             </article>
             <article>
-                <h3>IHF FIELD REGULATIONS</h3>
+                <h3 class="bottomH3">IHF FIELD REGULATIONS</h3>
                 <ol>
                     <li class="margenLista-rules">
                         <span>DIMENSIONS.</span> IHF Law 1 provides for flexible external field dimensions within a
@@ -81,8 +81,9 @@
                 </ol>
             </article>
             <article>
-                <h3>ALL-PLAY</h3>
-                <p class="identacion">All-play means that every recreation player on every team shall play atleast fifty percent of each
+                <h3 class="bottomH3">ALL-PLAY</h3>
+                <p class="identacion">All-play means that every recreation player on every team shall play atleast fifty
+                    percent of each
                     game. Coaches in the competition program are encouraged to play their players 50% of each game.</p>
                 <ul>
                     <li class="styleCircle-rules">
