--- a/about.html
+++ b/about.html
@@ -44,6 +44,9 @@
             </section>
         </div>
     </main>
+    <footer class="footer">
+        <p> &COPY; Germán - MindHub 2023</p>
+    </footer>
     
 </body>
 </html>
