--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,10 @@
             <p>We reply to your email as soon as we can.</p>
         </div>
     </main>
+    <footer class="footer">
+        <p> &COPY; Germán - MindHub 2023</p>
+    </footer>
+    
 </body>
 
 </html>
