--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             </article>
         </div>
     </main>
+    <footer class="footer">
+        <p> &COPY; Germán - MindHub 2023</p>
+    </footer>
 
 </body>
 
