--- a/registration.html
+++ b/registration.html
@@ -204,6 +204,10 @@
             </article>
         </section>
     </main>
+    <footer class="footer">
+        <p> &COPY; Germán - MindHub 2023</p>
+    </footer>
+    
 </body>
 
 </html>
