--- a/game_info.html
+++ b/game_info.html
@@ -160,6 +160,9 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </article>
     </main>
+    <footer class="footer">
+        <p> &COPY; Germán - MindHub 2023</p>
+    </footer>
 
 </body>
 </html>
