--- a/rules.html
+++ b/rules.html
@@ -95,6 +95,10 @@
             </article>
         </section>
     </main>
+    <footer class="footer">
+        <p> &COPY; Germán - MindHub 2023</p>
+    </footer>
+    
 </body>
 
 </html>
