--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="/styles/style3.css">
-    <link rel="shortcut icon" href="/images/miniLogo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/style3.css">
+    <link rel="shortcut icon" href="./images/miniLogo.png" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <figure>
-            <img class="logo" src="/images/logoMightyDucks.png" alt="Logo">
+            <img class="logo" src="./images/logoMightyDucks.png" alt="Logo">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
         <h2 class="leyendaHeader">Contact</h2>
@@ -29,8 +29,8 @@
     </nav>
     <main class="main-flex">
         <figure class="image-flex">
-            <img class="imagen1" src="/images/design1_image1.jpg" alt="jugando hockey medio campo">
-            <img class="imagen2" src="/images/design1_image2.jpg" alt="jugando hockey tiro al arco">
+            <img class="imagen1" src="./images/design1_image1.jpg" alt="jugando hockey medio campo">
+            <img class="imagen2" src="./images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
         <div class="div-flex div-flex-contact">
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
@@ -40,7 +40,7 @@
     <footer class="footer">
         <p> &COPY; Germán - MindHub 2023</p>
     </footer>
-    
+
 </body>
 
 </html>
