--- a/rules.html
+++ b/rules.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rules of Play & Policies</title>
-    <link rel="stylesheet" href="/styles/style3.css">
-    <link rel="shortcut icon" href="/images/miniLogo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/style3.css">
+    <link rel="shortcut icon" href="./images/miniLogo.png" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <figure>
-            <img class="logo" src="/images/logoMightyDucks.png" alt="Logo">
+            <img class="logo" src="./images/logoMightyDucks.png" alt="Logo">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
         <h2 class="leyendaHeader">Rules of play & policies</h2>
@@ -28,8 +28,8 @@
     </nav>
     <main class="main-flex">
         <figure class="image-flex fijarImagenes">
-            <img class="imagen1" src="/images/design1_image1.jpg" alt="jugando hockey medio campo">
-            <img class="imagen2" src="/images/design1_image2.jpg" alt="jugando hockey tiro al arco">
+            <img class="imagen1" src="./images/design1_image1.jpg" alt="jugando hockey medio campo">
+            <img class="imagen2" src="./images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
         <section class="div-flex div-flex-rules">
             <h2>IHF rules shall govern MDHL play except as modified herein</h2>
@@ -98,7 +98,7 @@
     <footer class="footer">
         <p> &COPY; Germán - MindHub 2023</p>
     </footer>
-    
+
 </body>
 
 </html>
