--- a/registration.html
+++ b/registration.html
@@ -31,10 +31,11 @@
             <img class="imagen1" src="./images/design1_image1.jpg" alt="jugando hockey medio campo">
             <img class="imagen2" src="./images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
-        <section class="div-flex div-flex-reg">
+
+        <section class="div-flex">
             <h2 class="centrarH2">Registration Form</h2>
             <article>
-                <form action="/show_data.html" method="get">
+                <form action="./show_data.html" method="get">
                     <fieldset class="flex-form-reg">
 
                         <div class="marginInput-reg">
