--- a/rules.html
+++ b/rules.html
@@ -31,7 +31,7 @@
             <img class="imagen1" src="./images/design1_image1.jpg" alt="jugando hockey medio campo">
             <img class="imagen2" src="./images/design1_image2.jpg" alt="jugando hockey tiro al arco">
         </figure>
-        <section class="div-flex div-flex-rules">
+        <section class="div-flex">
             <h2>IHF rules shall govern MDHL play except as modified herein</h2>
             <article>
                 <h3 class="bottomH3">SPORTSMANSHIP</h3>
