--- a/show_data.html
+++ b/show_data.html
@@ -1,6 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Feedback Sent</title>
     <link rel="stylesheet" href="./styles/style3.css">
     <link rel="shortcut icon" href="./images/miniLogo.png" type="image/x-icon">
@@ -27,7 +32,7 @@
                 feedback:</font>
         </h2>
 
-        <table border="1" align=center width="226">
+        <table border="1" align=center width="226" class="table-show-data">
             <tr>
                 <th align="center">Form Field</th>
                 <th align="center">Field Value</th>
